--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,13 @@ body {
     --color3: hsla(315, 37%, 86%, 1);
     --color4: hsla(45, 73%, 98%, 1);
     --color5: hsla(224, 40%, 79%, 1); */
+
+    --color1: hsla(224, 8%, 36%, 1);
+--color2: hsla(185, 100%, 49%, 1);
+/* --color3: hsla(13, 94%, 63%, 1); */
+--color3: hsla(0, 100%, 77%, 1);
+--color4: hsla(44, 94%, 63%, 1);
+--color5: hsla(0, 100%, 95%, 1);
     
     --header-height: 80px;
     --shadow: 0px 10px 20px -12px rgba(0,0,0,0.45);
@@ -47,7 +54,8 @@ section {
 
 header {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    align-items: center;
     background-color: var(--color3);
     height: var(--header-height);
     box-shadow: var(--shadow);
@@ -64,10 +72,6 @@ footer {
 h2 {
     font-size: 1.8rem;
     font-weight: bold;
-}
-.animal-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .gutter-right {
